--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,9 @@
-[package]
-name = "whisper-keys-last"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+resolver = "3"
+members = [
+  "key_listener",
+  "engine"
+, "ui"]
 
-[dependencies]
+[workspace.dependencies]
 anyhow = "1.0.98"
-iced = "0.13.1"
-json5 = "0.4.1"
-kira = "0.10.8"
-rayon = "1.10.0"
-rdev = { git = "https://github.com/rustdesk-org/rdev.git" }
-serde = { version = "1.0.219", features = ["derive"] }
