--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-engine = { path = "../engine" }
+lib = { path = "../lib" }
 iced = "0.13.1"
 anyhow = { workspace = true }
