--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -9,3 +9,6 @@ kira = "0.10.8"
 rayon = "1.10.0"
 serde = { version = "1.0.219", features = ["derive"] }
 anyhow = { workspace = true }
+serde_json = "1.0.141"
+rdev = { workspace = true }
+fastrand = "2.3.0"
