--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -5,7 +5,12 @@ edition = "2024"
 
 [dependencies]
 lib = { path = "../lib" }
-iced = "0.13.1"
+iced = { version = "0.13.1", features = ["advanced"] }
 anyhow = { workspace = true }
 rfd = "0.15.4"
 open = "5.3.2"
+
+[package.metadata.bundle]
+name = "WhisperKeys"
+identifier = "dev.jocke.whisper_keys"
+resources = ["helper/key_listener"]
